새창 열기 삭제

--- a/index.html
+++ b/index.html
@@ -76,21 +76,21 @@
                 <h2>What I do</h2>
             </div>
             <div class="do-me">
-                <div class="do-inner"><a href="https://namu.wiki/w/HTML" target="_blank">
+                <div class="do-inner"><a href="https://namu.wiki/w/HTML">
                     <div class="icon"><i class="fa-brands fa-html5"></i></div>
                     <div class="content">
                         <h3>HTML5</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo culpa magni laboriosam sit excepturi quibusdam adipisci, vero debitis?</p>
                     </div>
                 </div></a>
-                <div class="do-inner"><a href="https://namu.wiki/w/CSS" target="_blank">
+                <div class="do-inner"><a href="https://namu.wiki/w/CSS">
                     <div class="icon"><i class="fa-brands fa-css3-alt"></i></div>
                     <div class="content">
                         <h3>CSS3</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo culpa magni laboriosam sit excepturi quibusdam adipisci, vero debitis?</p>
                     </div>
                 </div></a>
-                <div class="do-inner"><a href="https://getbootstrap.kr/docs/5.0/getting-started/introduction/" target="_blank">
+                <div class="do-inner"><a href="https://getbootstrap.kr/docs/5.0/getting-started/introduction/">
                     <div class="icon"><i class="fa-brands fa-bootstrap"></i></div>
                     <div class="content">
                         <h3>BootStrap v5.0</h3>
