--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                 </div>
                 <div class="right">
                     <h3>안녕하세요, <strong>홍용기입니다.</strong></h3>
-                    <p>저는 경영지도사(CMI)이며, 빅데이터분석기사(BAE)입니다.</p><br>
-                    <p>또한, 국제공인컨설턴트(ICMCI CMC)이며 기업기술가치평가사(KCVA)이기도 합니다.</p><br>
-                    <p>저는 IT와 전혀 관련이 없는 비전공자이지만 데이터분석에 많은 관심을 가지고 있으며, 그에 따라 인공지능과 데이터분석을 지금도 꾸준히 연구하고 있습니다. </p><br>
-                    <p>여러분들을 만나서 너무 반갑고, 이런 인연을 바탕으로 공부도 같이 하고 비즈니스도 같이 할 수 있는 관계가 되기를 희망합니다.</p><br>
-                    <p>만남에 대한 책임은 하늘에 있고, 관계에 대한 책임은 사람에게 있다고 했으니...</p><br>
+                    <p>저는 경영지도사(CMI)이며, 국제공인컨설턴트(ICMCI CMC)입니다.
+                    또한, 국가기술 빅데이터 분석기사(BAE)이자 기술가치평가사(KCVA)이기도 합니다.</p><br>
+                    <p>저는 IT와 전혀 관련이 없는 비전공자이지만, 데이터분석에 많은 관심을 가지고 혼자 공부했고, IT관련 국가기술자격증 취득 후 관련 강의도 하고 있으며, 데이터분석에 관한 일반인들의 어려움을 누구보다도 공감하고 누구나 쉽게 따라할 수 있도록 하려고 노력하면서 지금도 꾸준히 연구하고 있습니다.</p><br>
+                    <p>여러분들을 만나서 너무 반갑고, 소중한 인연을 바탕으로 공부도 같이 하고 비즈니스도 같이 할 수 있는 파트너 혹은 동반자로서의 관계가 계속 이어지기를 희망합니다.</p><br>
+                    <p>만남에 대한 책임은 하늘에 있고, 관계에 대한 책임은 사람에게 있다고 했으니까요...</p><br>
                     <div class="social">
                         <a href="#"><i class="fa-brands fa-facebook"></i></a>
                         <a href="#"><i class="fa-brands fa-instagram"></i></a>
