--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                     <p>저는 IT와 전혀 관련이 없는 비전공자이지만, 데이터분석에 많은 관심을 가지고 혼자 공부했고, IT관련 국가기술자격증 취득 후 관련 강의도 하고 있으며, 데이터분석에 관한 일반인들의 어려움을 누구보다도 공감하고 누구나 쉽게 따라할 수 있도록 하려고 노력하면서 지금도 꾸준히 연구하고 있습니다.</p><br>
                     <p>여러분들을 만나서 너무 반갑고, 소중한 인연을 바탕으로 공부도 같이 하고 비즈니스도 같이 할 수 있는 파트너 혹은 동반자로서의 관계가 계속 이어지기를 희망합니다.</p><br>
                     <p>만남에 대한 책임은 하늘에 있고, 관계에 대한 책임은 사람에게 있다고 했으니까요...</p><br>
+                    <a href="https://search.naver.com/search.naver?where=nexearch&sm=tab_etc&mra=bjky&x_csa=%7B%22fromUi%22%3A%22kb%22%7D&pkid=1&os=30887777&qvt=0&query=%ED%99%8D%EC%9A%A9%EA%B8%B0" target="_blank" title="데이터 사이언티스트 홍용기 박사"><strong>네이버 인물정보 연결!</strong><br />
+                        <img src="네이버 인물정보.png" alt="NAVER"></a>
                     <div class="social">
                         <a href="#"><i class="fa-brands fa-facebook"></i></a>
                         <a href="#"><i class="fa-brands fa-instagram"></i></a>
