--- a/index.html
+++ b/index.html
@@ -82,21 +82,21 @@
                     <div class="icon"><i class="fa-brands fa-html5"></i></div>
                     <div class="content">
                         <h3>HTML5</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo culpa magni laboriosam sit excepturi quibusdam adipisci, vero debitis?</p>
+                        <p>The HyperText Markup Language or HTML is the standard markup language for documents designed to be displayed in a web browser. It defines the content and structure of web content. It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p>
                     </div>
                 </div></a>
                 <div class="do-inner"><a href="https://namu.wiki/w/CSS">
                     <div class="icon"><i class="fa-brands fa-css3-alt"></i></div>
                     <div class="content">
                         <h3>CSS3</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo culpa magni laboriosam sit excepturi quibusdam adipisci, vero debitis?</p>
+                        <p>Cascading Style Sheets (CSS) is a style sheet language used for specifying the presentation and styling of a document written in a markup language such as HTML or XML (including XML dialects such as SVG, MathML or XHTML). CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
                     </div>
                 </div></a>
-                <div class="do-inner"><a href="https://getbootstrap.kr/docs/5.0/getting-started/introduction/">
-                    <div class="icon"><i class="fa-brands fa-bootstrap"></i></div>
+                <div class="do-inner"><a href="https://namu.wiki/w/JavaScript">
+                    <div class="icon"><i class="fa-brands fa-js"></i></div>
                     <div class="content">
-                        <h3>BootStrap v5.0</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo culpa magni laboriosam sit excepturi quibusdam adipisci, vero debitis?</p>
+                        <h3>JavaScript</h3>
+                        <p>JavaScript is a programming language and core technology of the World Wide Web. As of 2023, 98.7% of websites use JavaScript on the client side for webpage behavior, often incorporating third-party libraries. All major web browsers have a dedicated JavaScript engine to execute the code on users devices.</p>
                     </div>
                 </div></a>
             </div>
