--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <p>여러분들을 만나서 너무 반갑고, 소중한 인연을 바탕으로 공부도 같이 하고 비즈니스도 같이 할 수 있는 파트너 혹은 동반자로서의 관계가 계속 이어지기를 희망합니다.</p><br>
                     <p>만남에 대한 책임은 하늘에 있고, 관계에 대한 책임은 사람에게 있다고 했으니까요...</p><br>
                     <a href="https://search.naver.com/search.naver?where=nexearch&sm=tab_etc&mra=bjky&x_csa=%7B%22fromUi%22%3A%22kb%22%7D&pkid=1&os=30887777&qvt=0&query=%ED%99%8D%EC%9A%A9%EA%B8%B0" target="_blank" title="데이터 사이언티스트 홍용기 박사"><strong>네이버 인물정보 연결!</strong><br>
-                        <img src="네이버 인물정보.png" alt="NAVER"></a>
+                        <img src="images/네이버 인물정보.png" alt="NAVER"></a>
                     <div class="social">
                         <a href="#"><i class="fa-brands fa-facebook"></i></a>
                         <a href="#"><i class="fa-brands fa-instagram"></i></a>
@@ -119,7 +119,7 @@
                     <h3>STRATEGY</h3>
                 </div>
                 <div class="portfolio-inner">
-                    <img src="images/isp2.jpg" alt="샘플이미지">
+                    <img src="images/isp.jpg" alt="샘플이미지">
                     <strong>정보화전략계획</strong>
                     <h3>ISP * ISMP * ODA</h3>
                 </div>
