--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <h1>
-                <button data-animation-scroll="true" data-target="#main">To tho Top</button>
+                <button data-animation-scroll="true" data-target="#main">To the Top</button>
             </h1>
             <nav>
                 <ul>
